--- a/src/app/layout/navigation/navigation.html
+++ b/src/app/layout/navigation/navigation.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+<nav class="navbar navbar-expand-lg navbar-light sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand fw-bold fs-5" href="/">
       <i class="bi bi-building"></i>
@@ -9,7 +9,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" [class.show]="isNavbarOpen" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
+      <ul class="navbar-nav ms-auto align-items-lg-center">
         <li class="nav-item">
           <a class="nav-link" routerLink="/" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{ exact: true }"
             (click)="closeNavbar()">
@@ -56,6 +56,11 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/contact-us" routerLinkActive="active" (click)="closeNavbar()">
             Contact Us
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="btn btn-primary" routerLink="/contact-us" (click)="closeNavbar()">
+            Get Quote
           </a>
         </li>
       </ul>
